# Exam_Paper_and_Question_Bank_Management_System

./: .gitignore  Dockerfile  Examination_and_Question_Bank_Management_System.rar  README.md  docker-compose.yml  logindialog.h  logindialog.ui  loginform.h  loginform.ui  main.cpp  mainwindow.h  ownInterface.h  paperproductiondialog.cpp  paperproductiondialog.h  paperproductiondialog.ui  rulemakerdialog.h  rulemakerdialog.ui  signupdialog.cpp  ui_admindialog.h  ui_logindialog.h  ui_paperproductiondialog.h  ui_signupdialog.h  ui_signupform.h
Back-end/: CMakeLists.txt  client.cpp  client.hpp  client_unencrypted.cpp  client_unencrypted.hpp  database.hpp  question_bank.cpp  question_bank.hpp  server.cpp  server.hpp  server_ood.cpp  server_simple.cpp  server_unencrypted.cpp  server_unencrypted.hpp  sqlite20_demo.cpp  user_info.cpp  user_info.hpp
Back-end/experimental/: async_socket_client.cpp  async_socket_server.cpp  sqlite20_demo.cpp
Back-end/experimental/mongodb_database/: mongodb_users.cpp  mongodb_users.hpp  setup_mongodbcxx
Back-end/mongodb_database/: MakeFile
Client_Server_Iter/: Alvin_server_unencrypted.cpp  CMakeLists.txt  activate.sh  bulletin.cpp  bulletin.hpp  client.cpp  client.hpp  client_unencrypted.cpp  client_unencrypted.hpp  database.hpp  db.cpp  db.hpp  question_bank.cpp  question_bank.hpp  server.hpp  server_ood.cpp  server_unencrypted.cpp  server_unencrypted.hpp  test.cpp  user_info.cpp  user_info.hpp
Client_Server_Iter/mongodb_database/: mongodb_users.hpp
Front-end/: CMakeLists.txt  CMakeLists.txt.user.6c7579e  LICENSE  Makefile  admindialog.cpp  admindialog.h  admindialog.ui  logindialog.cpp  loginform.cpp  mainwindow.cpp  mainwindow.ui  rulemakerdialog.cpp  signupdialog.h  signupdialog.ui  signupform.cpp  signupform.ui  ui_loginform.h  ui_mainwindow.h  ui_rulemakerdialog.h
Front-end/Exam_Paper_and_Question_Bank_Management_System/: CMakeLists.txt  admindialog.cpp  admindialog.h  admindialog.ui  logindialog.cpp  logindialog.h  logindialog.ui  loginform.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ownInterface.h  paperproductiondialog.cpp  paperproductiondialog.h  paperproductiondialog.ui  rulemakerdialog.cpp  rulemakerdialog.h  rulemakerdialog.ui  signupdialog.cpp  signupform.cpp  signupform.h  tcpclientsocket.cpp  tcpclientsocket.h
Front-end/debug/: CMakeCache.txt  Examination_and_Question_Bank_Management_System.cbp  cmake_install.cmake
Front-end/debug/.cmake/api/v1/reply/: codemodel-v2-3284bfe6b09ecff99959.json  index-2020-07-04T14-23-02-0462.json  target-Examination_and_Question_Bank_Management_System_autogen-Debug-c77ae22597deb671ee78.json
Front-end/release/Bulletin/yuxiRuleMaker/: 2020-07-06_15-45-21
Front-end/release/User/: fdfd  yuxiTeacher
Test/: CMakeList.txt  test  test-server.cpp
db/: db.cpp  db.hpp
debug/: Makefile
debug/.cmake/api/v1/reply/: cache-v2-5a73f138aa809d093a6e.json  cmakeFiles-v1-a19438ab2139b55ff50f.json  target-Examination_and_Question_Bank_Management_System-Debug-d14a229f3b851a8f6327.json
release/Bulletin/fdfd/: 2020-07-28_11-01-50
release/Question/English/chapter2/: 2020-07-06_15-55-23
release/User/: admin  yuxiRuleMaker
